# themefinder-cli

./: .gitignore  404.html  DEPENDENCIES.md  README.md  index.html  pyproject.toml  sitemap.xml
.github/workflows/: eval.yml
api_reference/: index.html
internal_contributors/: index.html
search/: search_index.json
src/themefinder/: __init__.py  cli.py  examples.py  llm_batch_processor.py  prompts.py  tasks.py
src/themefinder/prompts/: theme_generation.txt  theme_mapping.txt
test_data/: reference.csv  responses.csv  themes.csv
tests/: test_calibrate.py  test_evaluate.py  test_examples.py
