[project]
name = "themefinder"
version = "0.7.8"
description = "A topic modelling Python package designed for analysing one-to-many question-answer data eg free-text survey responses."
authors = [{name = "i.AI", email = "packages@cabinetoffice.gov.uk"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.13"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "langchain",
    "tiktoken",
    "pandas>=2.2.2",
    "python-dotenv>=1.0.1",
    "langfuse==2.29.1",
    "boto3>=1.29",
    "scikit-learn",
    "openpyxl>=3.1.5",
    "pyarrow>=15.0.0",
    "toml>=0.10.2",
    "langchain-aws",
    "typer[all]",
]

[project.urls]
Repository = "https://github.com/i-dot-ai/themefinder/"
Documentation = "https://i-dot-ai.github.io/themefinder/"

[project.scripts]
themefinder = "themefinder.cli:app"

[tool.uv]
package = true

[tool.uv.sources]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio>=0.24.0",
    "coverage>=7.6.10",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.27.0",
    "mkdocs-material>=9.5.50",
]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/themefinder"]
